--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,6 +1,7 @@
 <h1> Cocktail List</h1>
 <% @cocktails.each do |cocktail| %>
 <h2> <%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
+<p> <%= link_to "Delete", cocktail_path(cocktail), method: :delete, data: { confirm: "Are you sure?" } %></p>
 <% end %>
 
 <%= link_to "add new cocktail", new_cocktail_path %>
